--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -1,1 +1,35 @@
-// variables
+/* iOS 브라우저 높이 대응 */
+$vh: var(--vh, 1vh);
+
+/* Font Size */
+$base-size: 16px;
+
+/* Basic Color */
+$white: #fff;
+$black: #000;
+
+/* Primary Color */
+$primary-1: #1B5CED;
+$primary-2: #00C3FF;
+$primary-3: #D5DCEF;
+
+/* Tag Color */
+$tag-1: #FF4568;
+
+/* Gray */
+$gray100: #1a1a1a;
+$gray90: #262626;
+$gray80: #404040;
+$gray70: #595959;
+$gray60: #737373;
+$gray50: #8c8c8c;
+$gray40: #a6a6a6;
+$gray30: #bfbfbf;
+$gray20: #d2d2d2;
+$gray10: #f6f6f6;
+$gray00: #fff;
+
+/* Status colors */
+$positive: #0065dc; // 아직 없음
+$negative: #f00;
+
