feat: add fonts and typography

--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -1,8 +1,9 @@
 /* iOS 브라우저 높이 대응 */
 $vh: var(--vh, 1vh);
 
-/* Font Size */
+/* Font Bse */
 $base-size: 16px;
+$font-name: "NotoSans";
 
 /* Basic Color */
 $white: #fff;
