--- a/src/pages/sign-in/SignIn.module.scss
+++ b/src/pages/sign-in/SignIn.module.scss
@@ -5,17 +5,113 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  // background-color: aqua;
   .container {
     width: 440px;
     // height: fit-content;
     height: 600px;
     padding: 20px;
-    background-color: rgb(145, 163, 157);
+    // background-color: rgb(145, 163, 157);
     display: flex;
     flex-direction: column;
     // justify-content: center;
     align-items: center;
+    h1 {
+      font-size: 36px;
+    }
+    // form {
+    //   width: 100%;
+    //   input {
+    //     width: 100%;
+    //     max-width: 400px;
+    //     padding: 16px 0 16px 20px;
+    //     box-sizing: border-box;
+    //     font-size: 16px;
+    //     border: 1px solid #D2D2D2;
+    //     border-radius: 4px;
+    //     margin-bottom: 8px;
+    //   }
+    //   input::placeholder {
+    //     font-size: 16px;
+    //     color: #898989;
+    //   }
+    //   .error-login {
+    //     border: 1px solid red;
+    //   }
+    //   button {
+    //     background-color: #1B5CED;
+    //     width: 100%;
+    //     height: 48px;
+    //     padding: 16px auto;
+    //     font-size: 16px;
+    //     border-radius: 4px;
+    //     color: white;
+    //   }
+    // }
+    .sign-in-actions {
+      margin-top: 36px;
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      // background-color: red;
+      .link {
+        width: 100%;
+        height: 24px;
+        display: flex;
+        justify-content:center;
+        align-items: center;
+        text-align: center;
+        img {
+          position: relative;
+          margin-left: 6px;
+          bottom: 2px;
+          display: inline;
+        }
+        span {
+          color: #1B5CED;
+        }
+        span:hover {
+          color: #4680ff;
+        }
+      }
+    }
+    .social-login {
+      width: 100%;
+      margin-top: 36px;
+      button {
+        position: relative;
+        width: 100%;
+        border-radius: 4px;
+        height: 48px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        span {
+          position: absolute;
+          top: 50%;
+          transform: translate(0, -50%);
+          font-weight: 00;
+        }
+        img {
+          position: absolute;
+          left: 20px;
+        }
+      }
+      .kakao-btn {
+        background-color: #FEE500;
+      }
+      .google-btn {
+        background-color: #FFFFFF;
+        border: 1px solid #D2D2D2;
+        margin-top: 8px;
+      }
+      .github-btn {
+        margin-top: 8px;
+        background-color: #2A2A2A;
+        color: #fff;
+      }
+    }
     .social-login-wrap {
       width: 100%;
       display: flex;
@@ -33,5 +129,11 @@
         }
       }
     }
+  }
+}
+.login-input {
+  border: 1px solid #211f1f;
+  &:focus {
+    border-color: rgb(62, 78, 220);
   }
 }
