css : height 수정 etc : 컴포넌트명 pascalcase로 변경

--- a/src/pages/sign-in/SignIn.module.scss
+++ b/src/pages/sign-in/SignIn.module.scss
@@ -7,8 +7,8 @@
   align-items: center;
   .container {
     width: 440px;
-    // height: fit-content;
-    height: 600px;
+    height: fit-content;
+    // height: 600px;
     padding: 20px;
     // background-color: rgb(145, 163, 157);
     display: flex;
