feat: basic button

--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -13,6 +13,8 @@ $black: #000;
 $primary-1: #1B5CED;
 $primary-2: #00C3FF;
 $primary-3: #D5DCEF;
+$primary-1-hover: #0241CF;
+$disabled: #BEC6D8;
 
 /* Tag Color */
 $tag-1: #FF4568;
