--- a/src/styles/base/_reset.scss
+++ b/src/styles/base/_reset.scss
@@ -86,7 +86,7 @@ video {
   border: 0;
   margin: 0;
   font: inherit;
-  font-family: Pretendard, "Apple SD Gothic Neo", arial, sans-serif;
+  font-family: "Noto Sans Korean", "Apple SD Gothic Neo", arial, sans-serif;
   font-feature-settings: "cv13" on, "calt" off;
   font-size: 100%;
   font-weight: 400;
@@ -121,7 +121,8 @@ body {
 
 menu,
 ol,
-ul {
+ul,
+li {
   list-style: none;
 }
 
