css : signUp 페이지 margin, 타이머 간격조정

--- a/src/app/sign-up/SignUp.module.scss
+++ b/src/app/sign-up/SignUp.module.scss
@@ -1,7 +1,8 @@
 .page-wrap {
   width: 100vw;
   height: calc(100vh - 60px);
-  margin-top: 60px;
+  // margin-top: 60px;
+  margin-top: 10rem;
   display: flex;
   justify-content: center;
   align-items: center;
