--- a/src/components/SignUp/SignUpForm/SignUpForm.module.scss
+++ b/src/components/SignUp/SignUpForm/SignUpForm.module.scss
@@ -69,6 +69,9 @@
       font-size: 16px;
       color: #898989;
     }
+    &.email-authorization {
+      position: relative;
+    }
   }
   .agreement {
     width: 100%;
