--- a/src/components/MyPage/ChangePwForm/ChangePwForm.module.scss
+++ b/src/components/MyPage/ChangePwForm/ChangePwForm.module.scss
@@ -66,4 +66,27 @@
   .change-pw-btn:hover {
     background-color: #0241CF;
   }
+  .background {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    cursor: default;
+    .success-alarm {
+      position: absolute;
+      z-index: 2;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      display: flex;
+      background-color: #ffffff94;
+      justify-content: center;
+      align-items: center;
+      width: 498px;
+      height: 237px;
+      border-radius: 8px;
+      box-shadow: 0px 0px 12px 2px rgba(0,0,0,0.16);
+    }
+  }
 }
