--- a/src/components/dropdown/CommonDropdown/CommonDropdown.module.scss
+++ b/src/components/dropdown/CommonDropdown/CommonDropdown.module.scss
@@ -16,6 +16,11 @@
 
   &.size-full {
     width: 100%;
+
+    .selected-option-text {
+      flex: 1;
+      text-align: start;
+    }
   }
 
   .selected-option {
@@ -23,7 +28,7 @@
 
     display: flex;
     width: 100%;
-    height: 36px;
+    height: 40px;
     align-items: center;
     padding: 8px 20px;
     border: 1px solid #898989;
@@ -47,11 +52,13 @@
 
   .option-list {
     position: absolute;
-    top: 40px;
+    z-index: 20;
+    top: 44px;
     width: 100%;
     padding: 4px 0;
     border: 1px solid #898989;
     border-radius: 8px;
+    background-color: $white;
 
     .option {
       @include transition-default(background-color, color);
