--- a/src/components/input/BasicInput/BasicInput.module.scss
+++ b/src/components/input/BasicInput/BasicInput.module.scss
@@ -1,25 +1,27 @@
-input[type="text"] {
-  @include transition-default(border-color);
-  @include body-1;
-
-  width: 100%;
-  box-sizing: border-box;
-  padding: 0 16px;
-  border: 1px solid $gray20;
-  border-radius: 4px;
-  transition-duration: 0.2s;
-
-  &:focus:not(:disabled, .error) {
-    border-color: $primary-1;
-    outline: none;
-  }
-
-  &:disabled {
-    cursor: not-allowed;
-  }
-
-  &.error {
-    border-color: $negative;
+.common-input {
+  &[type="text"] {
+    @include transition-default(border-color);
+    @include body-1;
+  
+    width: 100%;
+    box-sizing: border-box;
+    padding: 0 16px;
+    border: 1px solid $gray20;
+    border-radius: 4px;
+    transition-duration: 0.2s;
+  
+    &:focus:not(:disabled, .error) {
+      border-color: $primary-1;
+      outline: none;
+    }
+  
+    &:disabled {
+      cursor: not-allowed;
+    }
+  
+    &.error {
+      border-color: $negative;
+    }
   }
 }
 
