--- a/src/app/sign-up/SignUp.module.scss
+++ b/src/app/sign-up/SignUp.module.scss
@@ -1,8 +1,7 @@
 .page-wrap {
   width: 100vw;
   height: calc(100vh - 60px);
-  // margin-top: 60px;
-  margin-top: 10rem;
+  margin-top: 60px;
   display: flex;
   justify-content: center;
   align-items: center;
