--- a/src/components/user/FollowModal/FollowModal.module.scss
+++ b/src/components/user/FollowModal/FollowModal.module.scss
@@ -14,6 +14,7 @@
     z-index: 2;
     top: 50%;
     left: 50%;
+    width: 600px;
     padding: 40px 44px;
     border-radius: 16px;
     background-color: $white;
