--- a/src/components/user/FollowModal/FollowModal.module.scss
+++ b/src/components/user/FollowModal/FollowModal.module.scss
@@ -30,5 +30,22 @@
         @include head-3;
       }
     }
+
+    .follow-list-wrap {
+      @include scroll-style;
+
+      height: 708px;
+      padding: 12px 0;
+      padding-right: 12px;
+      margin-top: 12px;
+      margin-right: -24px;
+      overflow-y: auto;
+
+      .follow-list {
+        li + li {
+          margin-top: 12px;
+        }
+      }
+    }
   }
 }
