--- a/src/app/board/_components/ArticleForm/ArticleForm.module.scss
+++ b/src/app/board/_components/ArticleForm/ArticleForm.module.scss
@@ -1,6 +1,9 @@
 .article-form-wrap {
   display: flex;
   gap: 30px;
+  width: 1200px;
+  margin: 0 auto;
+  padding-top: 55px;
 
   .left {
     width: 380px;
@@ -47,6 +50,15 @@
       height: 330px;
       border: 1px solid $gray20;
       border-radius: 16px;
+      padding: 12px 8px;
+      .question-contents {
+        resize: none;
+        width: 100%;
+        height: 100%;
+        outline: none;
+        border: transparent;
+        @include scroll($thumb: $gray20, $track: $gray10);
+      }
     }
 
     // TODO: 버튼 공통 스타일 수정 요망
