--- a/src/app/board/_components/QuestionInfoBox/QuestionInfoBox.module.scss
+++ b/src/app/board/_components/QuestionInfoBox/QuestionInfoBox.module.scss
@@ -13,8 +13,34 @@
 
   .tag-list {
     display: flex;
+    flex-wrap: wrap;
     margin-top: 12px;
     gap: 8px;
+    span[class*="tag"] {
+      max-width: 150px;
+      @include ellipsis;
+      display: block;
+    }
+    .tag-wrap {
+      position: relative;
+      .tag-delete-btn {
+        display: none;
+        align-items: center;
+        position: absolute;
+        top: 0;
+        right: 0;
+        transform: translate(50%, -50%);
+        padding: 2px;
+        background-color: $white;
+        border: 1px solid $gray20;
+        border-radius: 50%;
+      }
+      &:hover {
+        .tag-delete-btn {
+          display: flex;
+        }
+      }
+    }
   }
 }
 
