--- a/src/app/_components/QuestionListItem/QuestionListItem.module.scss
+++ b/src/app/_components/QuestionListItem/QuestionListItem.module.scss
@@ -1,6 +1,7 @@
 .question-list-item-wrap {
   display: flex;
   align-items: flex-start;
+  padding-bottom: 16px;
   padding-left: 6px;
   gap: 20px;
 
