--- a/src/components/modal/BasicModal/BasicModal.module.scss
+++ b/src/components/modal/BasicModal/BasicModal.module.scss
@@ -14,27 +14,32 @@
     width: fit-content;
     height: fit-content;
     min-width: 300px;
-    max-width: 700px;
+    max-width: 500px;
     min-height: 500px;
     max-height: 70%;
     background: white;
     border-radius: 4px;
     padding: 10px;
+    display: flex;
+    flex-direction: column;
 
     .modal-top {
       display: flex;
       justify-content: flex-end;
+      margin-bottom: 10px;
 
       .modal-close-btn {
         cursor: pointer;
+        padding: 5px;
       }
     }
 
     .modal-content {
-      width: 100%;
-      height: 100%;
+      display: flex;
+      flex: 1;
       padding: 10px;
       overflow-y: auto;
+      flex-direction: column;
     }
   }
 }
