--- a/src/styles/base/_reset.scss
+++ b/src/styles/base/_reset.scss
@@ -184,7 +184,7 @@ input[type="number"] {
 }
 
 input:-webkit-autofill {
-  -webkit-box-shadow: 0 0 0 1000px #111 inset;
+  -webkit-box-shadow: 0 0 0 1000px #ffffff00 inset;
 
   // -webkit-text-fill-color: $black;
 }
