--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -3,7 +3,7 @@
 $color-blue: #1B5CED;
 $color-sky-blue: #00C3FF;
 $color-light-gray: #D5DCEF;
-$color-gary: #d2d2d2;
+$color-gray: #d2d2d2;
 $color-neon-red: #FF4568;
 $color-red: #FF0000;
 $color-white: #f6f6f6;
