--- a/src/components/article/CodeEditor/CodeEditor.module.scss
+++ b/src/components/article/CodeEditor/CodeEditor.module.scss
@@ -1,6 +1,7 @@
 .code-editor-wrap {
   display: flex;
   overflow: hidden;
+  height: auto;
   min-height: 330px;
   flex-direction: column;
   padding: 12px 4px;
