--- a/src/components/layout/Header/Header.module.scss
+++ b/src/components/layout/Header/Header.module.scss
@@ -17,9 +17,10 @@
       height: 100%;
       align-items: center;
       justify-content: center;
-      color: $primary-1;
-      font-size: 24px;
-      font-weight: 700;
+
+      img {
+        width: 170%;
+      }
     }
 
     .search-input-wrap {
