--- a/src/components/organisms/Footer/Footer.module.scss
+++ b/src/components/organisms/Footer/Footer.module.scss
@@ -1,17 +1,45 @@
 .footer-wrap {
-  width: 100vw;
+  width: 1200px;
   height: 360px;
   // position: absolute;
   bottom: 0;
   left: 0;
   // 임시 border
   border-top: 1px solid #999;
+
   .contents-wrap {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     margin-top: 57px;
-    margin-left: 247px;
-    height: 300px;
+    height: 250px;
     background-color: white;
+    padding: 0 40px;
+
+    .info-wrap {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      font-size: 14px;
+      gap: 2rem;
+      span { 
+        line-height: 1.5;
+      } 
+      .info-top,
+      .info-bottom {
+        display: flex;
+        flex-direction: column;
+      }
+    }
+
+    .logo-img {
+      width: 160px;
+      height: 160px;
+    }
   }
+
+
+
   .copyright {
     height: 60px;
     background-color: #EEEEEE;
