feat: mypage edit

--- a/src/components/button/BasicButton/BasicButton.module.scss
+++ b/src/components/button/BasicButton/BasicButton.module.scss
@@ -17,11 +17,13 @@
 }
 
 .btn-md {
+  width: fit-content;
   height: 40px;
   border-radius: 4px;
 }
 
 .btn-sm {
+  width: fit-content;
   height: 40px;
   border-radius: 50px;
 }
