--- a/src/components/SignUp/AgreementModal/AgreementModal.module.scss
+++ b/src/components/SignUp/AgreementModal/AgreementModal.module.scss
@@ -1,12 +1,40 @@
 .terms-wrap {
-  width: 400px ;
+  width: 100%;
+  height: 70vh;
   display: flex;
+  flex-direction: column;
   flex:1;
   overflow: auto;
-  font-size: 12px;
   color: $gray60;
   line-height: 1.6;
   padding: 0 10px;
+  padding-bottom: 30px;
+  gap: 16px;
+
+  .content-wrap {
+    display: flex;
+    flex-direction: column;
+
+    h1 {
+      @include head-4;
+      color: $gray80;
+    }
+
+    h2 {
+      @include body-1;
+      color: $gray80;
+      margin-bottom: 8px;
+    }
+
+    .inner-text {
+      margin-left: 12px;
+    }
+  
+    p {
+      @include body-2;
+      margin-bottom: 4px;
+    }
+  }
 
   &::-webkit-scrollbar {
     width: 10px;
