--- a/src/components/SignUp/AgreementModal/AgreementModal.module.scss
+++ b/src/components/SignUp/AgreementModal/AgreementModal.module.scss
@@ -1,9 +1,10 @@
 .terms-wrap {
+  @include scroll-style;
   width: 100%;
   height: 70vh;
   display: flex;
   flex-direction: column;
-  flex:1;
+  flex: 1;
   overflow: auto;
   color: $gray60;
   line-height: 1.6;
@@ -29,28 +30,13 @@
     .inner-text {
       margin-left: 12px;
     }
-  
+
     p {
       @include body-2;
       margin-bottom: 4px;
     }
   }
-
-  &::-webkit-scrollbar {
-    width: 10px;
-  }
-
-  &::-webkit-scrollbar-track {
-    background-color: $gray10;
-    border-radius: 4px;
-  }
-
-  &::-webkit-scrollbar-thumb {
-    background-color: $gray20;
-    border-radius: 4px;
-  }
 }
-
 
 .footer {
   display: flex;
