--- a/src/components/modal/BasicModal/BasicModal.module.scss
+++ b/src/components/modal/BasicModal/BasicModal.module.scss
@@ -11,14 +11,11 @@
   background: rgba(0, 0, 0, 0.6);
 
   .modal-container {
-    width: fit-content;
-    height: fit-content;
-    min-width: 300px;
-    max-width: 500px;
+    width: 600px;
     min-height: 200px;
-    max-height: 70%;
+    max-height: 80%;
     background: white;
-    border-radius: 4px;
+    border-radius: 16px;
     padding: 10px;
     display: flex;
     flex-direction: column;
@@ -26,7 +23,6 @@
     .modal-top {
       display: flex;
       justify-content: flex-end;
-      margin-bottom: 10px;
 
       .modal-close-btn {
         cursor: pointer;
@@ -37,9 +33,10 @@
     .modal-content {
       display: flex;
       flex: 1;
-      padding: 10px;
+      padding: 0 10px;
       overflow-y: auto;
       flex-direction: column;
+      padding-bottom: 20px;
     }
   }
 }
