feat: signup organization

--- a/src/components/SignUp/SignUpForm/SignUpForm.module.scss
+++ b/src/components/SignUp/SignUpForm/SignUpForm.module.scss
@@ -67,6 +67,10 @@
     &.email-authorization {
       position: relative;
     }
+
+    .oranization-name-text {
+      color: $primary-1;
+    }
   }
   .agreement {
     width: 100%;
