--- a/src/app/_components/HomeLayout/HomeLayout.module.scss
+++ b/src/app/_components/HomeLayout/HomeLayout.module.scss
@@ -1,7 +1,8 @@
 .home-layout-wrap {
-  width: 1200px;
+  width: 1240px;
   margin: 0 auto;
   margin-top: 24px;
+  padding: 0 30px;
 }
 
 .home-layout-inner {
@@ -10,7 +11,7 @@
   gap: 30px;
 
   .list-wrap {
-    flex:1;
+    flex: 1;
 
     .list-title {
       @include head-2;
@@ -27,7 +28,6 @@
       .sub-title {
         @include head-4;
       }
-
     }
 
     .filter-wrap {
@@ -36,7 +36,7 @@
 
       .filter-btn {
         @include body-1;
-        
+
         cursor: pointer;
         padding: 8px 26px;
         height: 40px;
@@ -45,11 +45,11 @@
         background-color: $white;
         color: #898989;
         border: 1px solid #898989;
-      
+
         .filter-btn-inner {
           display: flex;
           gap: 4px;
-          
+
           svg {
             position: relative;
             top: 3px;
@@ -65,9 +65,8 @@
             fill: $primary-1;
           }
         }
-
       }
-  }
+    }
 
     .question-list {
       > li {
