--- a/src/components/MyPage/MyPageTop/MyPageTop.module.scss
+++ b/src/components/MyPage/MyPageTop/MyPageTop.module.scss
@@ -1,114 +1,114 @@
 .my-page-top-wrap {
-  width: 100vw;
+  width: 100%;
   background-color: #f6f6f6;
 
   .my-page-top-inner {
     position: relative;
     display: flex;
-    width: 1200px;
-    padding: 56px 0;
+    justify-content: space-between;
+    align-items: center;
+    width: 1240px;
+    padding: 56px 30px;
     margin: 0 auto;
     gap: 36px;
 
-    .info-wrap {
+    .user-wrap {
       display: flex;
-      flex-direction: column;
-      padding-top: 8px;
+      gap: 37px;
 
-      .nickname {
-        color: $black;
-        font-size: 24px;
-        font-weight: 700;
-        line-height: 35px;
-      }
-
-      .introduce {
-        min-height: 23px;
-        margin-top: 12px;
-        color: #000;
-        font-size: 16px;
-        font-weight: 400;
-        line-height: 23px;
-      }
-
-      .organization-list {
+      .info-wrap {
         display: flex;
-        margin-top: 8px;
-        gap: 8px;
+        flex-direction: column;
+        padding-top: 8px;
 
-        .organization-item {
-          color: $primary-1;
-          font-size: 14px;
-          font-weight: 400;
-          line-height: 20px;
+        .nickname {
+          color: $black;
+          font-size: 24px;
+          font-weight: 700;
+          line-height: 35px;
         }
-      }
 
-      .figure-info-wrap {
-        display: flex;
-        margin-top: 4px;
-        gap: 12px;
+        .introduce {
+          min-height: 23px;
+          margin-top: 12px;
+          color: #000;
+          font-size: 16px;
+          font-weight: 400;
+          line-height: 23px;
+        }
 
-        > div {
-          position: relative;
+        .organization-list {
           display: flex;
-          gap: 4px;
+          margin-top: 8px;
+          gap: 8px;
 
-          & + div {
-            &::before {
-              @include content;
+          .organization-item {
+            color: $primary-1;
+            font-size: 14px;
+            font-weight: 400;
+            line-height: 20px;
+          }
+        }
 
-              top: 50%;
-              left: -6px;
-              width: 1px;
-              height: 16px;
-              background-color: $gray20;
-              transform: translateY(-50%);
+        .figure-info-wrap {
+          display: flex;
+          margin-top: 4px;
+          gap: 12px;
+
+          > div {
+            position: relative;
+            display: flex;
+            gap: 4px;
+
+            & + div {
+              &::before {
+                @include content;
+
+                top: 50%;
+                left: -6px;
+                width: 1px;
+                height: 16px;
+                background-color: $gray20;
+                transform: translateY(-50%);
+              }
+            }
+
+            dt,
+            dd {
+              color: #898989;
+              font-size: 14px;
+              font-weight: 400;
+              line-height: 20px;
             }
           }
-
-          dt,
-          dd {
-            color: #898989;
-            font-size: 14px;
-            font-weight: 400;
-            line-height: 20px;
-          }
         }
-      }
 
-      .social-wrap {
-        display: flex;
-        margin-top: 12px;
-        gap: 16px;
-
-        .social-item {
+        .social-wrap {
           display: flex;
-          gap: 8px;
-          cursor: pointer;
+          margin-top: 12px;
+          gap: 16px;
 
-          &-title {
-            color: $black;
-            font-size: 14px;
-            font-weight: 500;
-            line-height: 20px;
-          }
+          .social-item {
+            display: flex;
+            gap: 8px;
+            cursor: pointer;
 
-          &-count {
-            color: $black;
-            font-size: 14px;
-            font-weight: 400;
-            line-height: 20px;
+            &-title {
+              color: $black;
+              font-size: 14px;
+              font-weight: 500;
+              line-height: 20px;
+            }
+
+            &-count {
+              color: $black;
+              font-size: 14px;
+              font-weight: 400;
+              line-height: 20px;
+            }
           }
         }
       }
-    }
-
-    .edit-button {
-      position: absolute;
-      top: 50%;
-      right: 0;
-      transform: translateY(-50%);
     }
   }
 }
