--- a/src/components/MyPage/ChangePwForm/ChangePwForm.module.scss
+++ b/src/components/MyPage/ChangePwForm/ChangePwForm.module.scss
@@ -1,9 +1,10 @@
 .form-wrap {
   width: fit-content;
-  padding: 20px;
+
   h1 {
     font-size: 24px;
     font-weight: bold;
+    margin-bottom: 16px;
   }
   .hint {
     display: block;
@@ -13,7 +14,7 @@
   .input-without-button-wrap {
     margin-top: 20px;
   }
-  .input-without-button-wrap:nth-child(n+2) {
+  .input-without-button-wrap:nth-child(n + 2) {
     margin-top: 8px;
   }
   label {
@@ -23,7 +24,7 @@
       padding: 16px 20px 16px 20px;
       box-sizing: border-box;
       font-size: 16px;
-      border: 1px solid #D2D2D2;
+      border: 1px solid #d2d2d2;
       border-radius: 4px;
     }
     input:focus {
@@ -64,7 +65,7 @@
     margin-top: 28px;
   }
   .change-pw-btn:hover {
-    background-color: #0241CF;
+    background-color: #0241cf;
   }
   .background {
     position: absolute;
@@ -86,7 +87,7 @@
       width: 498px;
       height: 237px;
       border-radius: 8px;
-      box-shadow: 0px 0px 12px 2px rgba(0,0,0,0.16);
+      box-shadow: 0px 0px 12px 2px rgba(0, 0, 0, 0.16);
     }
   }
 }
