feat: mypage top info

--- a/src/components/MyPage/MyPageTop/MyPageTop.module.scss
+++ b/src/components/MyPage/MyPageTop/MyPageTop.module.scss
@@ -107,6 +107,10 @@
               line-height: 20px;
             }
           }
+
+          .disabled {
+            cursor: not-allowed;
+          }
         }
       }
     }
