--- a/src/components/user/FollowModal/FollowModal.module.scss
+++ b/src/components/user/FollowModal/FollowModal.module.scss
@@ -1,7 +1,7 @@
 .follow-list-wrap {
   @include scroll-style;
 
-  height: 700px;
+  max-height: 700px;
   strong {
     @include head-3;
     margin-bottom: 12px;
