feat: organizaition edit form

--- a/src/components/icon/Tag/Tag.module.scss
+++ b/src/components/icon/Tag/Tag.module.scss
@@ -2,10 +2,9 @@
   @include body-2;
 
   display: inline-flex;
-  height: 22px;
   align-items: center;
   justify-content: center;
-  padding: 0 12px;
+  padding: 4px 16px;
   border-radius: 50px;
   background-color: $primary-3;
   color: $primary-1;
@@ -15,6 +14,6 @@ button.tag {
   @include transition-default(background-color);
 
   &:hover {
-    background-color: #C3CDEA;
+    background-color: #c3cdea;
   }
 }
