--- a/src/components/MyPage/MyPageEditForm/ChangeOrganizationForm/ChangeOrganizationForm.module.scss
+++ b/src/components/MyPage/MyPageEditForm/ChangeOrganizationForm/ChangeOrganizationForm.module.scss
@@ -26,9 +26,7 @@
           border: 1px solid #d2d2d2;
           border-radius: 4px;
         }
-        input:focus {
-          border: 1px solid #1b5ced;
-        }
+
         input::placeholder {
           font-size: 16px;
           color: #898989;
@@ -91,24 +89,91 @@
         }
       }
     }
+
+    span {
+      width: 100%;
+      display: inline-block;
+      position: relative;
+      top: 4px;
+      font-size: 12px;
+      color: #fa3f3f;
+      line-height: 1.3;
+      &.valid-msg {
+        color: $color-blue;
+      }
+      &.need-duplication-check {
+        color: $color-sky-blue;
+      }
+      &.success {
+        color: $color-blue;
+      }
+    }
   }
 
-  span {
-    width: 100%;
-    display: inline-block;
-    position: relative;
-    top: 4px;
-    font-size: 12px;
-    color: #fa3f3f;
-    line-height: 1.3;
-    &.valid-msg {
-      color: $color-blue;
+  .organization-list-wrap {
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+    margin-top: 24px;
+
+    h2 {
+      @include head-4;
     }
-    &.need-duplication-check {
-      color: $color-sky-blue;
+
+    .organization-list {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 8px;
+      span[class*="tag"] {
+        max-width: 150px;
+        @include ellipsis;
+        display: block;
+      }
+
+      .tag-wrap {
+        position: relative;
+        .tag-delete-btn {
+          display: none;
+          align-items: center;
+          position: absolute;
+          top: 0;
+          right: 0;
+          transform: translate(50%, -50%);
+          padding: 2px;
+          background-color: $white;
+          border: 1px solid $gray20;
+          border-radius: 50%;
+        }
+        &:hover {
+          .tag-delete-btn {
+            display: flex;
+          }
+        }
+      }
     }
-    &.success {
-      color: $color-blue;
+  }
+
+  .background {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    cursor: default;
+    .success-alarm {
+      position: absolute;
+      z-index: 2;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      display: flex;
+      background-color: #ffffffdb;
+      justify-content: center;
+      align-items: center;
+      width: 498px;
+      height: 237px;
+      border-radius: 8px;
+      box-shadow: 0px 0px 12px 2px rgba(0, 0, 0, 0.16);
     }
   }
 }
