--- a/src/components/MyPage/MyPageContentForm/MyPageQuestionItem/MyPageQuestionItem.module.scss
+++ b/src/components/MyPage/MyPageContentForm/MyPageQuestionItem/MyPageQuestionItem.module.scss
@@ -3,7 +3,6 @@
   width: 100%;
   height: 100px;
   align-items: center;
-  padding-bottom: 16px;
   padding-left: 6px;
   gap: 24px;
   border-bottom: solid 1px $gray20;
@@ -21,6 +20,7 @@
       .question-title {
         @include head-4;
         line-height: 1;
+        cursor: pointer;
       }
     }
 
