feat: mypage api correction

--- a/src/components/user/FollowModal/FollowItem/FollowItem.module.scss
+++ b/src/components/user/FollowModal/FollowItem/FollowItem.module.scss
@@ -6,6 +6,8 @@
   .left {
     display: flex;
     gap: 12px;
+    cursor: pointer;
+    align-items: center;
 
     .user-info {
       display: flex;
