--- a/src/components/MyPage/MyPageTop/MyPageTop.module.scss
+++ b/src/components/MyPage/MyPageTop/MyPageTop.module.scss
@@ -20,6 +20,7 @@
         display: flex;
         flex-direction: column;
         padding-top: 8px;
+        justify-content: center;
 
         .nickname {
           color: $black;
