--- a/src/app/board/_components/QuestionInfoBox/QuestionInfoBox.module.scss
+++ b/src/app/board/_components/QuestionInfoBox/QuestionInfoBox.module.scss
@@ -11,6 +11,28 @@
     }
   }
 
+  .add-tag-wrap {
+    display: flex;
+    flex-direction: column;
+    margin-top: 16px;
+
+    span {
+      @include body-2;
+      color: $gray40;
+      margin: 4px 0;
+    }
+
+    .add-tag-button {
+      display: flex;
+      align-items: flex-start;
+      color: #898989;
+      padding: 10px 20px;
+      border-radius: 4px;
+      border: 1px solid #898989;
+      cursor: pointer;
+    }
+  }
+
   .tag-list {
     display: flex;
     flex-wrap: wrap;
