--- a/src/app/board/_components/QuestionDetailForm/components/CommentBlock/CommentBlock.module.scss
+++ b/src/app/board/_components/QuestionDetailForm/components/CommentBlock/CommentBlock.module.scss
@@ -7,7 +7,7 @@
     font-weight: 700;
 
     .comment-count {
-      color: #1B5CED;
+      color: #1b5ced;
       font-weight: 700;
     }
 
@@ -18,11 +18,19 @@
 
   .comment-list-wrap {
     margin-top: 20px;
-    
+
     > li {
       & + li {
         margin-top: 12px;
       }
     }
+  }
+
+  .none-comment-wrap {
+    color: #898989;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 32px 0;
   }
 }
