feat: question answer post

--- a/src/app/board/_components/QuestionDetailForm/QuestionDetailForm.module.scss
+++ b/src/app/board/_components/QuestionDetailForm/QuestionDetailForm.module.scss
@@ -3,7 +3,7 @@
   gap: 30px;
   width: 1200px;
   margin: 0 auto;
-  padding-top: 55px;
+  padding: 55px 0;
 
   .question-content-wrap {
     flex: 1;
