--- a/src/app/board/_components/QuestionDetailForm/components/AnswerHeader/AnswerHeader.module.scss
+++ b/src/app/board/_components/QuestionDetailForm/components/AnswerHeader/AnswerHeader.module.scss
@@ -1,47 +1,76 @@
 .answer-header-wrap {
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  gap: 30px;
 
-  .left {
-    display: flex;
-    gap: 29px;
-
-    .user-info {
-      display: flex;
-      flex-direction: column;
-      gap: 2px;
-
-      .user-name {
-        color: $black;
-        font-size: 16px;
-        font-weight: 700;
-        line-height: 23px;
-      }
-
-      .timestamp {
-        color: #898989;
-        font-size: 12px;
-        font-weight: 400;
-        line-height: 17px;
-      }
-    }
-  }
-
-  .right {
+  .answer-content-wrap {
     display: flex;
     align-items: center;
-    gap: 8px;
+    justify-content: space-between;
+    flex: 1;
+    border-bottom: 1px solid $gray20;
+    padding: 16px 0;
 
-    .like-count {
-      @include body-2;
+    .left {
+      display: flex;
+      gap: 29px;
 
-      color: $black;
+      .user-info {
+        display: flex;
+        flex-direction: column;
+        gap: 2px;
+
+        .user-name {
+          color: $black;
+          font-size: 16px;
+          font-weight: 700;
+          line-height: 23px;
+        }
+
+        .answer-info {
+          display: flex;
+          align-items: center;
+          gap: 7px;
+          @include body-2;
+
+          .timestamp {
+            font-weight: 400;
+            line-height: 17px;
+          }
+
+          .edit-wrap {
+            display: flex;
+            gap: 5px;
+
+            div {
+              color: $gray30;
+              cursor: pointer;
+              transition: all 0.2s ease-in-out;
+
+              &:hover {
+                color: $primary-1;
+              }
+            }
+          }
+        }
+      }
     }
 
-    .like-on {
-      svg path {
-        fill: #1B5CED;
+    .right {
+      display: flex;
+      align-items: center;
+      gap: 8px;
+
+      .like-count {
+        @include body-2;
+
+        color: $black;
+      }
+
+      .like-on {
+        svg path {
+          fill: #1b5ced;
+        }
       }
     }
   }
