feat: post answer

--- a/src/app/board/_components/QuestionDetailForm/components/AnswerHeader/AnswerHeader.module.scss
+++ b/src/app/board/_components/QuestionDetailForm/components/AnswerHeader/AnswerHeader.module.scss
@@ -1,7 +1,12 @@
 .answer-header-wrap {
   display: flex;
   align-items: center;
-  gap: 30px;
+
+  .icon {
+    width: 55px;
+    display: flex;
+    align-items: center;
+  }
 
   .answer-content-wrap {
     display: flex;
