--- a/src/app/board/_components/QuestionDetailForm/components/AnswerItem/AnswerItem.module.scss
+++ b/src/app/board/_components/QuestionDetailForm/components/AnswerItem/AnswerItem.module.scss
@@ -2,6 +2,9 @@
   display: flex;
   flex-direction: column;
   gap: 28px;
+  border-bottom: 2px solid $gray20;
+  padding-bottom: 48px;
+  padding-top: 24px;
 
   > .content-wrap {
     padding-left: 55px;
