--- a/src/components/MyPage/MyPageContentForm/NotificationListItem/NotificationListItem.module.scss
+++ b/src/components/MyPage/MyPageContentForm/NotificationListItem/NotificationListItem.module.scss
@@ -1,9 +1,13 @@
 .notification-item {
   display: flex;
   flex-direction: column;
-  padding: 12px 0;
+  padding: 12px 8px;
   border-bottom: solid 1px $gray20;
   gap: 4px;
+
+  &.not-read-item {
+    background-color: hsla(221, 85%, 52%, 0.05);
+  }
 
   &-top {
     display: flex;
@@ -13,6 +17,8 @@
     .notification-top-content {
       @include body-2;
       font-weight: 600;
+      cursor: pointer;
+
       span {
         color: $primary-1;
         font-weight: 600;
